fix: corrected some maps flowing offscreen on lower resolution displays

--- a/app/partials/scheduled/scheduled.less
+++ b/app/partials/scheduled/scheduled.less
@@ -25,7 +25,6 @@
 
 	.setUnavailable .hideSetUnavailable,
 	.setUnavailable #rightPanel .nav {
-
 		display: none;
 	}
 
@@ -48,6 +47,26 @@
 }
 
 #scheduled {
+
+
+	.popover.map {
+		padding: 0;
+		overflow: hidden;
+
+		.popover-content {
+			overflow: hidden;
+			padding: 0;
+
+			h4 {
+				position: absolute;
+				padding: 2%;
+				background: rgba(255, 255, 255, .7);
+				line-height: .8em;
+			}
+
+		}
+
+	}
 
 	.openSeats {
 		font-size: 2em;
